Add SpearAttackMixin to fix spear hits not working issue. Fixed a minor render bug.